Change default control and label names

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lzb-CONTROL-NAME",
-  "title": "Lazy Blocks: CONTROL_LABEL Control",
+  "title": "Lazy Blocks: CTA Button Control",
   "version": "1.0.0",
   "description": "SHORT_DESCRIPTION",
   "license": "GPL-2.0",
